overlays/spain/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: taco-cloud
  name: taco-cloud
  namespace: taco-cloud
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: taco-cloud
    weight: 100
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
